# tech-training

./: README.md  main.py
PostgreSQL/: main.py  readme.md  test.py
PostgreSQL/crud/: connection.py  crud.py  logger.py  main.py  model.py  readme.md  requirements.txt
RabbitMQ/: readme.md
api_work/: README.md  app.py
api_work/models/: request_models.py  response_models.py
api_work/routes/: api_routes.py
api_work/utils/: exceptions.py  logger.py
temp_work/: main.py  pyproject.toml
temp_work/config/: logger.py
temp_work/model/: model.py
temp_work/routes/: api_route.py
temp_work/tests/: test_api_v1.py
temp_work/utils/: exceptions.py
